syntax = "proto3";

package fast_ml_lasso;

option csharp_namespace = "Fast.ML.Lasso.Grpc";
option go_package = "fastmllassospb";
option java_multiple_files = true;
option java_outer_classname = "FastMLLassoProto";
option java_package = "com.fastmllasso";

service LassoService {
    rpc Train (TrainingRequest) returns (TrainingResponse);
    rpc Predict (PredictionRequest) returns (PredictionResponse);
}

// TODO: как сторить пиклы в базке
// TODO: как передавать пикл в запросе

message TrainingRequest {
    string filepath = 1;
    map<string, string> parameters = 2;
}

message TrainingResponse {
    string configuration = 1;
}

message PredictionRequest {
    string filepath = 1;
}

message PredictionResponse {
    string message = 1;
}
